# mk_build

./: .gitignore  README.md  build.sh  builder_example.py  common.sh  common_vars.sh  configure  example.gup  flake.nix  gup-c-o  gup-png-puml  util.sh
python-project/: noxfile.py  pyproject.toml  setup.cfg
python-project/mk_build/: __init__.py  __main__.py  config.py  configure.py  log.py  message.py  util.py  validate.py
python-project/mk_build/gup/: __init__.py  archive.py  assemble.py  bin_o.py  cc_and_link.py  o-asm  o-asm.py  o-c.py  o_c.py
python-project/mk_build/util/: __init__.py  io.py
python-project/python_package/: config.py  util.py
python-project/python_package/gup/: __init__.py  o-asm
python-project/test/: test_build.py  test_gup.py
