[project]
name = "mk_build"
version = "0.0.1"
requires-python = ">=3.10"

dependencies = [
    "tomlkit"
]

[project.optional-dependencies]
test = [
    "coverage",
    "flake8",
    "mypy",
    "pytest"
]

[project.scripts]
configure = "mk_build.configure:main"

[tool.coverage.run]
source = [ "mk_build" ]

[tool.mypy]
packages = [ "mk_build", "test" ]
strict = true

[[tool.mypy.overrides]]
module = [
    "mk_build",
    "mk_build.config",
    "mk_build.configure",
    "mk_build.build.*",
    "test.test_build",
]
disable_error_code = [
    "attr-defined",
    "comparison-overlap",
    "no-any-return",
    "type-arg"
]

[[tool.mypy.overrides]]
module = [
    "mk_build.gup.*"
]
disable_error_code = [
    "arg-type",
    "attr-defined",
    "override",
    "type-arg",
    "union-attr"
]

[tool.pytest.ini_options]
testpaths = [ "test" ]
