[project]
name = "mk_build"
version = "0.0.1"
requires-python = ">=3.10"

dependencies = [
    "tomlkit"
]

[project.optional-dependencies]
test = [
    "coverage",
    "flake8",
    "mypy",
    "pytest"
]

[project.scripts]
configure = "mk_build.configure:main"

[tool.coverage.run]
source = [ "mk_build" ]

[tool.mypy]
packages = [ "mk_build", "test" ]
strict = true

[tool.pytest.ini_options]
testpaths = [ "test" ]
