[project]
name = "mk_build"
version = "0.0.1"
requires-python = ">=3.10"

dependencies = [
    "tomlkit"
]

[project.optional-dependencies]
test = [
    "coverage",
    "flake8",
    "mypy",
    "pytest"
]

[project.scripts]
configure = "mk_build.configure:main"

"archive.py" = "mk_build.gup.archive:main"
"assemble.py" = "mk_build.gup.assemble:main"
"bin_o.py" = "mk_build.gup.bin_o:main1"
"cc_and_link.py" = "mk_build.gup.cc_and_link:main"
"o_c.py" = "mk_build.gup.o_c:main"

[tool.coverage.run]
source = [ "mk_build" ]

[tool.mypy]
packages = [ "mk_build", "test" ]
strict = true

[tool.pytest.ini_options]
testpaths = [ "test" ]
